--- a/.github/workflows/docker-web-tests.yml
+++ b/.github/workflows/docker-web-tests.yml
@@ -16,7 +16,11 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-      - name: container build
+      - name: build candles
+        run: docker build -f Dockerfile.app -t candles
+      - name: build candle_nginx
+        run: docker duild -f Dockerfile.web -t candle_nginx
+      - name: container compose
         run: docker compose up --build
 
       
