fixed opechatka in docker build

--- a/.github/workflows/docker-web-tests.yml
+++ b/.github/workflows/docker-web-tests.yml
@@ -19,7 +19,7 @@ jobs:
       - name: build candles
         run: docker build -f Dockerfile.app -t candles .
       - name: build candle_nginx
-        run: docker duild -f Dockerfile.web -t candle_nginx .
+        run: docker build -f Dockerfile.web -t candle_nginx .
       - name: container compose
         run: docker compose up --build
 
