--- a/.github/workflows/docker-web-tests.yml
+++ b/.github/workflows/docker-web-tests.yml
@@ -21,7 +21,7 @@ jobs:
       - name: build candle_nginx
         run: docker build -f Dockerfile.web -t candle_nginx .
       - name: container compose
-        run: docker compose up --build
+        run: docker compose up --build --abort-on-container-exit
 
       
         
