--- a/.github/workflows/docker-web-tests.yml
+++ b/.github/workflows/docker-web-tests.yml
@@ -22,6 +22,10 @@ jobs:
         run: docker build -f Dockerfile.web -t candle_nginx .
       - name: container compose
         run: docker compose up --build --abort-on-container-exit
+      - name: tag n push app
+        run: |
+          docker tag candles ${{secrets.DOCKER_USERNAME}}/test-repo-app
+          docker push ${{secrets.DOCKER_USERNAME}}/test-repo-app
 
       
         
