--- a/.github/workflows/docker-web-tests.yml
+++ b/.github/workflows/docker-web-tests.yml
@@ -38,7 +38,7 @@ jobs:
       - name: tag version check
         id: get-version
         run: |
-          VERSION=$(helm/test-repo-chart/Chart.yaml)
+          VERSION=$(test-repo-chart/Chart.yaml)
           echo "${VERSION}" >> $GITHUB_OUTPUT
 
       
