--- a/.github/workflows/docker-web-tests.yml
+++ b/.github/workflows/docker-web-tests.yml
@@ -34,12 +34,12 @@ jobs:
         uses: azure/setup-helm@v3
         with:
           version: 'v3.17.3'
-
-      - name: tag version check
-        id: get-version
+      - name: helm package or the scary part
         run: |
-          VERSION=$(test-repo-chart/Chart.yaml)
-          echo "${VERSION}" >> $GITHUB_OUTPUT
+          mkdir helm_package
+          helm package test-repo-chart helm_package
+          ls helm_package
+        
 
       
         
