--- a/.github/workflows/docker-web-tests.yml
+++ b/.github/workflows/docker-web-tests.yml
@@ -40,6 +40,7 @@ jobs:
           helm package test-repo-chart --destination helm_package
           ls helm_package
       - name: publish
+        uses: softprops/action-gh-release@v1
         with:
           tag_name: latest
           name: Release
