--- a/.github/workflows/docker-web-tests.yml
+++ b/.github/workflows/docker-web-tests.yml
@@ -6,6 +6,8 @@ on:
     branches: [ "helm/test-repo-chart" ]
 jobs:
   run-test:
+    permissions:
+      contents: write
     environment: DOCKER
     runs-on: ubuntu-latest
     steps:
